--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images\favicon-32x32.png">
 
   <link rel="stylesheet" href="style.css">
   
@@ -16,7 +16,7 @@
   <div class="White-Card">
 
         <div class="image">
-        <img src="assets\images\illustration-article.svg" alt="illustration-article">
+        <img src="images\illustration-article.svg" alt="illustration-article">
         </div>
 
       <div class="section-publication ">
@@ -30,7 +30,7 @@
         </div> 
 
         <div class="author">
-        <img src="assets\images\image-avatar.webp" alt="Greg profile picture">
+        <img src="images\image-avatar.webp" alt="Greg profile picture">
         <p> Greg Hooper</p>
         </div>
   
