--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </div>
 
       <div class="section-publication ">
-      <h3>Learning</h3>
+      <h3 class="section-color">Learning</h3>
       <p> Published 21 Dec 2023</p>
       </div>
 
-        <div class="heading & text">   
+        <div class="heading-text">   
         <h2>HTML & CSS foundations</h2>
         <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
         </div> 
@@ -36,7 +36,7 @@
   
         <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Your Name Here</a>.
+        Coded by <a href="#">Eddie Bones</a>.
         </div>
   </div>
 </body>
