--- a/index.html
+++ b/index.html
@@ -14,30 +14,39 @@
 <body>
 
   <div class="White-Card">
-
+        <image>
         <div class="image">
         <img src="images\illustration-article.svg" alt="illustration-article">
         </div>
+        </image>
 
-      <div class="section-publication ">
-      <h3 class="section-color">Learning</h3>
-      <p> Published 21 Dec 2023</p>
-      </div>
+        <section>
+        <div class="section-publication ">
+        <h3 class="section-color">Learning</h3>
+        <p> Published 21 Dec 2023</p>
+        </div>
+        </section>
 
+        <main>
         <div class="heading-text">   
         <h2>HTML & CSS foundations</h2>
         <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
         </div> 
+        </main>
 
+        <section>
         <div class="author">
         <img src="images\image-avatar.webp" alt="Greg profile picture">
         <p> Greg Hooper</p>
         </div>
-  
+        </section>
+
+        <footer>
         <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="#">Eddie Bones</a>.
         </div>
+        </footer>
   </div>
 </body>
 </html>
