--- a/index.html
+++ b/index.html
@@ -14,38 +14,35 @@
 <body>
 
   <div class="White-Card">
-      <image>
-        <div class="image">
-        <img src="images\illustration-article.svg" alt="illustration-article">
-        </div>
-      </image>
+      <header aria-label="image">
+          <div class="image">
+          <img src="images\illustration-article.svg" alt="illustration">
+          </div>
+      </header>
 
-      <section>
-        <div class="section-publication ">
-        <h3 class="section-color">Learning</h3>
-        <p> Published 21 Dec 2023</p>
-        </div>
+      <section aria-labelledby="section title">
+          <div class="section-publication ">
+          <h3 class="section-color">Learning</h3>
+          <p> Published 21 Dec 2023</p>
+          </div>
       </section>
 
-      <main>
-        <div class="heading-text">   
-        <h2>HTML & CSS foundations</h2>
-        <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
-        </div> 
+      <main aria-labelledby="heading and text">
+          <div class="heading-text">   
+          <h2>HTML & CSS foundations</h2>
+          <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+          </div> 
       </main>
 
-      <section>
-        <div class="author">
-        <img src="images\image-avatar.webp" alt="Greg profile picture">
-        <p> Greg Hooper</p>
-        </div>
-      </section>
-
-      <footer>
-        <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Eddie Bones</a>.
-        </div>
+      <footer aria-labelledby="author and attribution">
+          <div class="author">
+          <img src="images\image-avatar.webp" alt="Greg-profile-picture">
+          <p> Greg Hooper</p>
+          </div>
+          <div class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+          Coded by <a href="#">Eddie Bones</a>.
+          </div>
       </footer>
   </div>
 </body>
