--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 
-  <div class="White-Card">
-      <header aria-label="image">
-          <div class="image">
+    <header aria-label="image"></header>
+      <div class="White-Card">
+          <div class="illustration">
           <img src="images\illustration-article.svg" alt="illustration">
           </div>
       </header>
@@ -45,5 +45,6 @@
           </div>
       </footer>
   </div>
+  
 </body>
 </html>
