--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="images\favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
   <link rel="stylesheet" href="style.css">
   
@@ -16,7 +16,7 @@
     <header aria-label="illustration"></header>
       <div class="White-Card">
           <div class="illustration">
-          <img src="images\illustration-article.svg" alt="illustration">
+          <img src="images/illustration-article.svg" alt="illustration">
           </div>
       </header>
 
@@ -36,7 +36,7 @@
 
       <footer aria-labelledby="author">
           <div class="author">
-          <img src="images\image-avatar.webp" alt="Greg-profile-picture">
+          <img src="images/image-avatar.webp" alt="Greg-profile-picture">
           <p> Greg Hooper</p>
           </div>
           <div class="attribution">
