--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
 </head>
 <body>
 
-    <header aria-label="illustration"></header>
+    <header>
       <div class="White-Card">
           <div class="illustration">
           <img src="images/illustration-article.svg" alt="illustration">
           </div>
       </header>
 
-      <section aria-labelledby="section-publication">
+      <section>
           <div class="section-publication ">
           <h3 class="section-color">Learning</h3>
           <p> Published 21 Dec 2023</p>
           </div>
       </section>
 
-      <main aria-labelledby="heading-text">
+      <main>
           <div class="heading-text">   
           <h2>HTML & CSS foundations</h2>
           <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
           </div> 
       </main>
 
-      <footer aria-labelledby="author">
+      <footer>
           <div class="author">
           <img src="images/image-avatar.webp" alt="Greg-profile-picture">
           <p> Greg Hooper</p>
