--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
       </div>
 
       <section>
-          <div class="section-publication ">
-          <h3 class="section-color">Learning</h3>
+          <div class="section-publication">
+          <h2 class="section-color">Learning</h2>
           <p> Published 21 Dec 2023</p>
           </div>
       </section>
 
-      <main>
+      <section>
           <div class="heading-text">   
-          <h2>HTML & CSS foundations</h2>
+          <h1>HTML & CSS foundations</h1>
           <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
           </div> 
-      </main>
+        </section>
 
       <footer>
           <div class="author">
