--- a/index.html
+++ b/index.html
@@ -12,27 +12,29 @@
 
 </head>
 <body>
-
-      <div class="White-Card">
+  
+  <div class="White-Card">
+      <header role="banner">
           <div class="illustration">
           <img src="images/illustration-article.svg" alt="illustration">
       </div>
+      </header>
 
-      <section>
+      <nav role="navigation">
           <div class="section-publication">
           <h2 class="section-color">Learning</h2>
           <p> Published 21 Dec 2023</p>
           </div>
       </section>
 
-      <section>
+      <main role="main">
           <div class="heading-text">   
           <h1>HTML & CSS foundations</h1>
           <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
           </div> 
-        </section>
+        </main>
 
-      <footer>
+      <footer role="contentinfo">
           <div class="author">
           <img src="images/image-avatar.webp" alt="Greg-profile-picture">
           <p> Greg Hooper</p>
