--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-  
+
   <div class="White-Card">
       <header role="banner">
           <div class="illustration">
@@ -25,7 +25,7 @@
           <h2 class="section-color">Learning</h2>
           <p> Published 21 Dec 2023</p>
           </div>
-      </section>
+        </nav>
 
       <main role="main">
           <div class="heading-text">   
