--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
 <body>
 
   <div class="White-Card">
-      <header role="banner">
+      <header>
           <div class="illustration">
           <img src="images/illustration-article.svg" alt="illustration">
       </div>
       </header>
 
-      <nav role="navigation">
+      <nav>
           <div class="section-publication">
           <h2 class="section-color">Learning</h2>
           <p> Published 21 Dec 2023</p>
           </div>
         </nav>
 
-      <main role="main">
+      <main>
           <div class="heading-text">   
           <h1>HTML & CSS foundations</h1>
           <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
           </div> 
         </main>
 
-      <footer role="contentinfo">
+      <footer>
           <div class="author">
           <img src="images/image-avatar.webp" alt="Greg-profile-picture">
           <p> Greg Hooper</p>
