--- a/index.html
+++ b/index.html
@@ -1,50 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="images/">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/" />
 
-  <link rel="stylesheet" href="style.css">
-  
-  <title>Frontend Mentor | Blog preview card</title>
+    <link rel="stylesheet" href="style.css" />
 
-</head>
-<body>
+    <title>Frontend Mentor | Blog preview card</title>
+  </head>
 
-  <div class="White-Card">
-      <header>
-          <div class="illustration">
-          <img src="images/illustration-article.svg" alt="illustration">
+  <body>
+    <div class="container">
+      <div class="illustrations">
+        <img src="images/illustration-article.svg" alt="illustration" />
       </div>
-      </header>
 
-      <nav>
-          <div class="section-publication">
-          <h2 class="section-color">Learning</h2>
-          <p> Published 21 Dec 2023</p>
-          </div>
-        </nav>
+      <div class="section-publication">
+        <h6 class="section-color">Learning</h6>
+        <p>Published 21 Dec 2023</p>
+      </div>
 
-      <main>
-          <div class="heading-text">   
-          <h1>HTML & CSS foundations</h1>
-          <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
-          </div> 
-        </main>
+      <div class="heading-text">
+        <h1>HTML & CSS foundations</h1>
+        <p>
+          These languages are the backbone of every website, defining structure,
+          content, and presentation.
+        </p>
+      </div>
+
+      <div class="author">
+        <img src="images/image-avatar.webp" alt="Greg-profile-picture" />
+        <p>Greg Hooper</p>
+      </div>
 
       <footer>
-          <div class="author">
-          <img src="images/image-avatar.webp" alt="Greg-profile-picture">
-          <p> Greg Hooper</p>
-          </div>
-          <div class="attribution">
-          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-          Coded by <a href="#">Eddie Bones</a>.
-          </div>
+        <div class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Eddie Bones</a>.
+        </div>
       </footer>
-  </div>
-
-</body>
+    </div>
+  </body>
 </html>
